# structural-induction

./: .travis.yml  README.md  changelog  structural-induction.cabal
Induction/: Structural.hs  Structural.lhs
Induction/Structural/: Auxiliary.hs  Linearise.hs  Simple.hs  Subterms.hs  Terms.lhs  Types.hs  Unsound.hs  Util.hs  Utils.hs
example/: Example.hs  Mini.hs
test/: Env.hs  EnvTypes.hs  Main.hs  Nat.hs  Runner.hs  Test.hs  Trace.hs  Unsound.hs  Util.hs  Walk.hs
